[project]
name = "nlp-lab-unipi"
version = "0.1.0"
description = ""
authors = [
    {name = "Lampros Kouk",email = "lampirikoskouk@gmail.com"}
]
readme = "README.md"
requires-python = "3.10.16"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "stanza (>=1.10.1,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "huggingface-hub[hf-xet] (>=0.30.2,<0.31.0)",
    "transformers (>=4.38,<5.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "anytree (>=2.13.0,<3.0.0)",
    "language-tool-python (>=2.9.3,<3.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
